--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Incidenti Stradali Italia 2023 - La curva del rischio: Analisi incidenti 2023 </title>
+    <title>Incidenti Stradali Italia 2023 - La curva del rischio: Analisi incidenti 2023</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
     <style>
         body {
@@ -141,7 +141,7 @@
     <div class="container">
         <div class="header">
             <h1>Morti e Feriti in Incidenti Stradali per Tipo di Strada</h1>
-            <div class="subtitle">Italia 2023 - Progetto "Tra asfalto e silenzi"</div>
+            <div class="subtitle">Italia 2023 - Progetto "La curva del rischio: Analisi incidenti 2023"</div>
         </div>
         
         <div class="chart-container">
